[INFRA] feat: 파드생성 테스트